src/main/java/com/example/test/omnivore2trendithon2025/global/error/exception/AccessDeniedGroupException.java
package com.example.test.omnivore2trendithon2025.global.error.exception;

public abstract class AccessDeniedGroupException extends RuntimeException{
    public AccessDeniedGroupException(String message) {
        super(message);
    }
}
